510_ai_ollama_k8s/webui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: open-webui-service
  namespace: ollama
spec:
  type: LoadBalancer # NodePort  # Use LoadBalancer if you're on a cloud that supports it
  selector:
    app: open-webui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      # If using NodePort, you can optionally specify the nodePort:
      # nodePort: 30000
